moved all pages
